--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RuangAI Bootcamp – Links</title>
-    <meta name="description"
-        content="Kumpulan link resmi RuangAI Bootcamp – platform bootcamp AI terbaik di Indonesia." />
+    <title>Workshop AI untuk Dakwah dan Usaha</title>
+    <meta name="description" content="Kumpulan link penting untuk Workshop AI untuk Dakwah dan Usaha" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
 
     <style>
         /* ─── Reset & Base ─────────────────────────────────────────── */
