--- a/index.html
+++ b/index.html
@@ -489,7 +489,8 @@
                 <span class="link-arrow">→</span>
             </a>
 
-            <a href="#" target="_blank" rel="noopener" class="link-card" id="link5">
+            <a href="https://www.youtube.com/watch?v=mN4Yvw_mmOc" target="_blank" rel="noopener" class="link-card"
+                id="link5">
                 <div class="link-thumb-icon"><i class="fa-solid fa-video"></i></div>
                 <div class="link-info">
                     <div class="link-title">Panduan Membuat Video dengan Wan AI</div>
