hide yang belum siap

--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
                 <span class="link-arrow">→</span>
             </a>
 
+            <!--
             <a href="#" target="_blank" rel="noopener" class="link-card" id="link4">
                 <div class="link-thumb-icon"><i class="fa-solid fa-file-powerpoint"></i></div>
                 <div class="link-info">
@@ -416,6 +417,7 @@
                 </div>
                 <span class="link-arrow">→</span>
             </a>
+            -->
 
             <a href="https://www.youtube.com/watch?v=mN4Yvw_mmOc" target="_blank" rel="noopener" class="link-card"
                 id="link5">
@@ -426,7 +428,8 @@
                 <span class="link-arrow">→</span>
             </a>
 
-            <a href="#" target="_blank" rel="noopener" class="link-card" id="link6">
+            <a href="https://codepolitan.notion.site/Kumpulan-Prompt-Wan-AI-Siap-Pakai-314944ea682e80e18afef58469cc86ec"
+                target="_blank" rel="noopener" class="link-card" id="link6">
                 <div class="link-thumb-icon"><i class="fa-solid fa-note-sticky"></i></div>
                 <div class="link-info">
                     <div class="link-title">Kumpulan Prompt untuk Membuat Video dengan Wan AI</div>
@@ -442,6 +445,7 @@
                 <span class="link-arrow">→</span>
             </a>
 
+            <!--
             <a href="#" target="_blank" rel="noopener" class="link-card" id="link8">
                 <div class="link-thumb-icon"><i class="fa-solid fa-star"></i></div>
                 <div class="link-info">
@@ -449,7 +453,7 @@
                 </div>
                 <span class="link-arrow">→</span>
             </a>
-
+            -->
         </div>
 
     </div><!-- /page -->
