--- a/index.html
+++ b/index.html
@@ -445,15 +445,14 @@
                 <span class="link-arrow">→</span>
             </a>
 
-            <!--
-            <a href="#" target="_blank" rel="noopener" class="link-card" id="link8">
+            <a href="https://forms.gle/VcNLzgPBuZx3v94X9" target="_blank" rel="noopener" class="link-card" id="link8">
                 <div class="link-thumb-icon"><i class="fa-solid fa-star"></i></div>
                 <div class="link-info">
-                    <div class="link-title">Testimony</div>
+                    <div class="link-title">Formulir Testimony</div>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
-            -->
+
         </div>
 
     </div><!-- /page -->
