--- a/index.html
+++ b/index.html
@@ -437,10 +437,19 @@
                 <span class="link-arrow">→</span>
             </a>
 
-            <a href="https://forms.gle/4HfRFb1SKwW5Kyv27" target="_blank" rel="noopener" class="link-card" id="link7">
+            <a href="https://codepolitan.notion.site/Tugas-Workshop-AI-untuk-Dakwah-dan-Usaha-314944ea682e80bea979fbc65bb27364?source=copy_link"
+                target="_blank" rel="noopener" class="link-card" id="link7">
                 <div class="link-thumb-icon"><i class="fa-solid fa-pen-to-square"></i></div>
                 <div class="link-info">
                     <div class="link-title">Tugas Workshop</div>
+                </div>
+                <span class="link-arrow">→</span>
+            </a>
+
+            <a href="https://forms.gle/4HfRFb1SKwW5Kyv27" target="_blank" rel="noopener" class="link-card" id="link7">
+                <div class="link-thumb-icon"><i class="fa-solid fa-pen-to-square"></i></div>
+                <div class="link-info">
+                    <div class="link-title">Formulir Pengumpulan Tugas Workshop</div>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
