--- a/index.html
+++ b/index.html
@@ -409,15 +409,14 @@
                 <span class="link-arrow">→</span>
             </a>
 
-            <!--
-            <a href="#" target="_blank" rel="noopener" class="link-card" id="link4">
+            <a href="https://www.canva.com/design/DAHCTGa4kHE/Bao16i7cEOa5dG_bdEY_Qg/edit?utm_content=DAHCTGa4kHE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+                target="_blank" rel="noopener" class="link-card" id="link4">
                 <div class="link-thumb-icon"><i class="fa-solid fa-file-powerpoint"></i></div>
                 <div class="link-info">
                     <div class="link-title">Slide Materi Workshop</div>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
-            -->
 
             <a href="https://www.youtube.com/watch?v=mN4Yvw_mmOc" target="_blank" rel="noopener" class="link-card"
                 id="link5">
