--- a/index.html
+++ b/index.html
@@ -418,6 +418,15 @@
                 <span class="link-arrow">→</span>
             </a>
 
+            <a href="https://www.youtube.com/watch?v=IPlxV8MBWKI" target="_blank" rel="noopener" class="link-card"
+                id="link4">
+                <div class="link-thumb-icon"><i class="fa-solid fa-video"></i></div>
+                <div class="link-info">
+                    <div class="link-title">Rekaman Sesi Zoom Workshop AI untuk Dakwah dan Usaha</div>
+                </div>
+                <span class="link-arrow">→</span>
+            </a>
+
             <a href="https://www.youtube.com/watch?v=mN4Yvw_mmOc" target="_blank" rel="noopener" class="link-card"
                 id="link5">
                 <div class="link-thumb-icon"><i class="fa-solid fa-video"></i></div>
